[package]
name = "intptr"
version = "0.1.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

description = "Unmanaged, explicitly sized and typed Pointers."
documentation = "https://docs.rs/intptr/"
repository = "https://github.com/CasualX/intptr"
readme = "readme.md"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.dataview]
version = "0.1"
optional = true
