[package]
name = "intptr"
version = "0.1.6" # Update readme if changed
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Unmanaged, explicitly sized and typed Pointers."
documentation = "https://docs.rs/intptr/"
repository = "https://github.com/CasualX/intptr"
readme = "readme.md"

[features]
nightly = []

# Allow casts between raw pointers and IntPtrs
# This is unsound under Strict Provenance rules
int2ptr = []

# Implement `Pod` for the IntPtrs
dataview = ["dataview_0_1", "dataview_1"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[dependencies.dataview_0_1]
package = "dataview"
version = "0.1"
optional = true
default-features = false

[dependencies.dataview_1]
package = "dataview"
version = "1.0"
optional = true
default-features = false
