[package]
name = "intptr"
version = "0.2.0" # Update readme if changed
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Unmanaged, explicitly sized and typed Pointers."
documentation = "https://docs.rs/intptr/"
repository = "https://github.com/CasualX/intptr"
readme = "readme.md"

[features]
nightly = []

# Allow casts between raw pointers and IntPtrs
# This is unsound under Strict Provenance rules
int2ptr = []

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[dependencies.dataview]
version = "1.0"
optional = true
default-features = false
